react-client/src/SimpleNavbar/Navbar.module.css
.header {
  background-color: #00E000;
  /* ONLY sticky within parent, then disappears. So for a navbar, parent needs to grow/contain all content! */
  position: sticky;
  color: #000 !important;
}

.brand {
  color: white !important;
  background-color: #000;
  font-weight: bold;
  border: 2px solid #000;
  border-radius: 0.25rem;
}
.brand:hover {
  color: lime !important;
}

@media only screen and (max-width: 767px) {
  .nav-collapse {
    order: 2;
  }
}

@media only screen and (max-width: 575px) {
  .nav-container {
    margin-top: 1rem;
  }
}
@media only screen and (max-width: 767px) {
  .nav-container {
    display: flex;
    flex-direction: column;
  }
}

.navItem {
  height: 40px;
}

.navItem:hover, .navItem:active {
  border-width: 2px !important;
  border-color: white !important;
  color: black !important;
}

.navButton {
  color: #000 !important;
  font-weight: 550;
  display: flex;
  border-radius: 0.15rem !important; /* Change BS 5 links' default + prevent odd gap when links in button */
  justify-content: center; /* horizontal text align */
  align-items: center; /* Vertical text align */
}

.navButton:hover {
  color: black !important; /* Keeps consistent styling allowing parent navItem to handle hover */
  text-decoration: none;
}

.activeNavButton {
  background-color: black !important;
  color: white !important;
}

.activeNavButton:hover {
  color: lime !important;
}

